--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>BF16</title>
 	<link rel="stylesheet" href="./style.css">
-	<script type="application/javascript" src="./p5.min.js"></script>
-	<script type="application/javascript" src="./bf16.js"></script>
+	<script type="application/javascript" src="./js/p5.min.js"></script>
+	<script type="application/javascript" src="./js/bf16.js"></script>
 </head>
 <body>
 	<script type="application/javascript">new bf16()</script>
