--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 		<canvas id="BF16-Renderer" width="512" height="512"></canvas>
 	</div>
 	<div id="BF16-Control">
+		<label>Grayscale</label>
+		<input  type="checkbox" id="grayscale">
 		<label>Program</label>
-		<input  type="text"    id="program">
-		<input  type="button"  id="runProgram" value="run">
+		<input  type="text"   id="program">
+		<input  type="button" id="runProgram" value="run">
 	</div>
 </body>
 </html>
